# api/models/branch.go
@@ -20,7 +20,6 @@ type UpdateBranch struct {
 	ID        string    `json:"id"`
 	Name      string    `json:"name"`
 	Address   string    `json:"address"`
-	UpdatedAt time.Time `json:"updated_at"`
 }
 
 type BranchsResponse struct {
