# api/models/product.go
@@ -6,7 +6,7 @@ type Product struct {
 	ID         string    `json:"id"`
 	Name       string    `json:"name"`
 	Price      string    `json:"price"`
-	Barcode    string    `json:"barcode"`
+	Barcode    int64       `json:"barcode"`
 	CategoryID string    `json:"category_id"`
 	CreatedAt  time.Time `json:"created_at"`
 	UpdatedAt  time.Time `json:"updated_at"`
@@ -16,7 +16,6 @@ type Product struct {
 type CreateProduct struct {
 	Name       string `json:"name"`
 	Price      string `json:"price"`
-	Barcode    string `json:"barcode"`
 	CategoryID string `json:"category_id"`
 }
 
@@ -24,7 +23,7 @@ type UpdateProduct struct {
 	ID         string    `json:"id"`
 	Name       string    `json:"name"`
 	Price      string    `json:"price"`
-	Barcode    string    `json:"barcode"`
+	Barcode    int64       `json:"barcode"`
 	CategoryID string    `json:"category_id"`
 	UpdatedAt  time.Time `json:"updated_at"`
 }
